--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ gdk-pixbuf = {version = "0.9.0"}
 glib = "0.10.0"
 bytes = "0.5.4"
 scraper = "0.12.0"
-reqwest = {path = "C:\\Users\\John\\Desktop\\projects\\reqwest\\reqwest", features = ["cookies"]}
+reqwest = { version = "0.11.4", features = ["cookies"] }
 tokio = { version = "0.2", features = ["full"] }
 stopwatch = "0.0.7"
 serde_json = "1.0.57"
